--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,13 @@
 <li>
+  <% unless current_user.id == user.id %>
   Name: <%= user.name %>
   <span class="profile-link">
     <%= link_to 'See Profile',  user_path(user), class: 'profile-link' %>
+    <% unless user.friend?(user) %>
+      <%= link_to 'Add Friend', friendships_path(user_id: user.id), method: :post %>
+    <% end %>
+
   </span>
+  <% end %>
+
 </li>
