--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <section class="user-section">
   <h2><%= "Name: #{@user.name}" %></h2>
-  <h3><%%></h3>
+  <%= link_to 'Add Friend', friendships_path(user_id: @user.id), method: :post %>
   <article class="timeline">
     <h3>Recent posts:</h3>
     <ul class="posts">
