--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,3 +1,5 @@
+<% if current_user.friend?(post.user)  %>
+
 <li class="post">
   <div>
     <div class='post-attribution' >
@@ -21,3 +23,4 @@
     <% end %>
   </div>
 </li>
+<%end %>
