--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,12 +17,16 @@
         <div class="menu-item">
           <%= menu_link_to 'All users', users_path %>
         </div>
+        <div class="menu-item">
+          <%= menu_link_to 'Friendships', friendships_path %>
+        </div>
       </div>
+
       <% if current_user %>
+        <p><small> Logged in as: <%= current_user.name %></small></p>
         <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
       <% else %>
-        <%= link_to 'Sign in', user_session_path %>
-      <% end %>
+        <%= link_to 'Sign in', user_session_path %> <% end %>
     </nav>
     <% if notice.present? %>
       <div class="notice">
