Reverse order of the posts to show latest posts first.

--- a/app/views/posts/_timeline.html.erb
+++ b/app/views/posts/_timeline.html.erb
@@ -1,6 +1,6 @@
 <% posts_arr = custom_timeline %>
 <% posts_arr.each do |arr|%>
-  <% arr.each do |post| %>
+  <% arr.sort_by(&:created_at).reverse_each do |post| %>
     <li class="post">
       <div>
         <div class='post-attribution' >
