finished tests for posts

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -8,7 +8,7 @@
       <%= like_or_dislike_btn(post) %>
     </div>
   </div>
-  <p class="post-content">
+  <p id="post-content">
     <%= post.content %>
   </p>
 
