--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -3,11 +3,11 @@
   Name: <%= user.name %>
   <span class="profile-link">
     <%= link_to 'See Profile',  user_path(user), class: 'profile-link' %>
-    <% unless current_user.friendship_requested?(user) || user.friendship_requested?(current_user) %>
+    <% unless friend_or_friendship_requested(user, current_user) %>
       <%= link_to 'Add Friend', friendships_path(user_id: user.id), method: :post %>
     <% end %>
 
-    <% if user.friendship_requested?(current_user) %>
+    <% if friend_status(user, current_user) %>
       <a>| &nbsp &nbsp Accept Friend Request:</a>
       <%= render "friend_request" %>
     <% end %> 
