--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap");
 
-$primary-color-dark: #689f38;
-$primary-color: #8bc34a;
-$primary-color-light: #dcedc8;
+$primary-color-dark: #115293;
+$primary-color: #1976d2;
+$primary-color-light: #4791db;
 $primary-color-text: #212121;
 $divider-color: #bdbdbd;
 
@@ -57,7 +57,7 @@ a {
   }
 
   .menu {
-    width: 80%;
+    width: 75%;
     justify-content: space-between;
 
     .menu-item {
