--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,8 @@
   </head>
   <body>
     <nav class="nav">
-      <%= link_to 'Stay in touch', root_path %>
+   <%= link_to 'Fakebook', root_path %>
+      
       <div class="menu">
         <div class="menu-item">
           <%= menu_link_to 'Timeline', posts_path %>
@@ -23,7 +24,7 @@
       </div>
 
       <% if current_user %>
-        <p><small> Logged in as: <%= current_user.name %></small></p>
+        <p><small> Logged in as: <%= current_user.name %> |</small></p>
         <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
       <% else %>
         <%= link_to 'Sign in', user_session_path %> <% end %>
