--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,8 @@
   <h2><%= "Name: #{@user.name}" %></h2>
 
     <article class="timeline">
-    
+   <%=friend_or_friendship_requested(@user, current_user) %>     
+
     <%= friend_status(@user, current_user) %>
    
     <h3>Recent posts:</h3>
